--- a/src/scss/partials/nav.scss
+++ b/src/scss/partials/nav.scss
@@ -24,6 +24,7 @@ nav {
     align-items: flex-end;
     .nav__links {
       font-weight: $bold-weight;
+      padding-bottom: 0.2em; // Fix alignment with title
       a {
         padding-left: 1.5em;
         &.active {
